--- a/template/include/annotation-blockquote-inside.tmpl
+++ b/template/include/annotation-blockquote-inside.tmpl
@@ -5,18 +5,19 @@
 		   title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>"
 		   href="<{titleLinkHref}>"
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
+		   <[IF titleLinkDataAttributes]><{titleLinkDataAttributes}><[IFEND]>
 		   <{titleLinkIconMetadata}>
 			   ><{fullTitleHTML}></a>\
 		<[IF secondaryTitleLinksHTML]><span class="secondary-title-links"><{secondaryTitleLinksHTML}></span><[IFEND]>\
-		<[IF abstract & ![ originalURL | authorDateAux ] ]>:<[IFEND]>\
+		<[IF abstract & ![ archiveURL | authorDateAux ] ]>:<[IFEND]>\
 
-		<[IF originalURL]>
-		<span class="originalURL">[<a
-			 title="Link to original URL for <{titleText}>"
-			 href="<{originalURL}>"
+		<[IF archiveURL]>
+		<span class="archiveURL">[<a
+			 title="Link to local archive for <{titleText}>"
+			 href="<{archiveURL}>"
 			 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
-			 alt="Original URL for this archived link; may be broken."
-				 ><{originalURLText}></a>]</span>
+			 alt="Locally archived version of this URL"
+				 ><{archiveURLText}></a>]</span>
 		<[IFEND]>\
 
 		<[IF authorDateAux]><[IF2 author | date]>,\ <[IF2END]><{authorDateAux}><[IF2 abstract]>:<[IF2END]><[IFEND]>
