--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -3737,8 +3737,8 @@ section.footnotes .footnote-self-link {
     --text-indent: 0em;
 }
 
-.annotation span.data-field,
-.annotation-partial span.data-field {
+.annotation p.data-field.author-date-aux,
+.annotation-partial p.data-field.author-date-aux {
     --text-hyphenation: none;
 }
 
@@ -3751,8 +3751,8 @@ section.footnotes .footnote-self-link {
 
 /*  Original URL.
  */
-.annotation .originalURL,
-.annotation-partial .originalURL {
+.annotation .archiveURL,
+.annotation-partial .archiveURL {
     font-variant-caps: small-caps;
     margin-left: 0.25em;
 }
