404: fix HTML validation (?) and move 'h' upwards

--- a/404.page
+++ b/404.page
@@ -14,9 +14,13 @@ index: true
 error404: true
 ...
 
-<figure class="float-right outline-not">
-<svg width="452" height="452" alt="You went too far."><title>&lsquo;I think you went too far.&rsquo; [Image of Fraktur/blackletter lowercase letter &lsquo;H&rsquo;, alluding to the &lsquo;G&rsquo; Fraktur logo of Gwern.net, humorously implying that the reader who has triggered a 404 Not Found error went too far past the &lsquo;G&rsquo;.]</title><use href="/static/img/logo/logo-unifrakturmaguntia-lowercase-h.svg#logo-unifrakturmaguntia-lowercase-h"></use></svg>
-<figcaption aria-hidden="true">You went too far.</figcaption>
+<figure class="float-right outline-not" style="margin-top: -50px;">
+    <svg width="452" height="452" aria-labelledby="logoDesc">
+        <title>'I think you went too far.'</title>
+        <desc id="logoDesc">[Image of blackletter lowercase letter ‘H’, alluding to the ‘G’ Fraktur logo of Gwern.net, humorously implying that the reader who has triggered a 404 Not Found error went too far past the ‘G’.]</desc>
+        <use href="/static/img/logo/logo-unifrakturmaguntia-lowercase-h.svg#logo-unifrakturmaguntia-lowercase-h"></use>
+    </svg>
+    <figcaption aria-hidden="true">You went too far.</figcaption>
 </figure>
 
 <div class="epigraph">
