--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2302,18 +2302,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5198,14 +5198,14 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5338,7 +5338,7 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5760,14 +5760,14 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5957,6 +5957,14 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 }
 #page-toolbar > button svg {
     display: block;
+
+	/*	The following two properties are not valid CSS. They are here to fix
+		a Safari-specific bug, which causes the toolbar toggle button to not
+		display. These properties should be ignored by non-Safari browsers.
+			—SA 2023-09-24
+	 */
+	width: intrinsic;
+	height: intrinsic;
 }
 
 /*  Collapse button (chevron); hidden on desktop.
@@ -6662,7 +6670,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#question');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7228,7 +7236,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1695478579#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1695502497#circle-notch-solid');
 
     pointer-events: none;
 }
