--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -33,6 +33,10 @@
      */
     --GW-abstract-border-color: #bbb;
 
+	/*	Block context highlighting.
+	 */
+	--GW-block-context-span-highlight-color: #ddd;
+
     /*  Table of contents.
      */
     --GW-TOC-border-color: #ccc;
@@ -356,6 +360,10 @@
     /*  Abstracts.
      */
     --GW-abstract-border-color: #6c6c6c;
+
+	/*	Block context highlighting.
+	 */
+	--GW-block-context-span-highlight-color: #494949;
 
     /*  Table of contents.
      */
@@ -904,6 +912,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1695614652">
-<script src="/static/js/head.js?v=1695662616"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1695670058">
+<script src="/static/js/head.js?v=1695670058"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1695502497" as="image">
