--- a/css/colors-dark-GENERATED.css
+++ b/css/colors-dark-GENERATED.css
@@ -32,6 +32,10 @@
      */
     --GW-abstract-border-color: #6c6c6c;
 
+	/*	Block context highlighting.
+	 */
+	--GW-block-context-span-highlight-color: #494949;
+
     /*  Table of contents.
      */
     --GW-TOC-border-color: #5c5c5c;
