--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2302,18 +2302,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5189,14 +5189,14 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5329,7 +5329,7 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5751,14 +5751,14 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6661,7 +6661,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1695502497#question');
+    background-image: url('/static/img/icon/icons.svg?v=1695478579#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7227,7 +7227,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1695502497#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1695478579#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7454,7 +7454,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
     position: relative;
     z-index: 1;
 
-/*	This is currently broken in Safari. Since it’s not important enough to 
+/*	This is currently broken in Safari. Since it’s not important enough to
 	figure out a way to scope it to only non-Safari browsers, I’m disabling it
 	for now. This should be revisited in a year.
 		—SA 2023-09-24
@@ -7973,8 +7973,8 @@ a[data-link-icon='NBER'] .link-icon-hook::after {
     width: 1.6em;
 }
 
-a[data-link-icon='sgfp'] .link-icon-hook::after {
-        line-height: 1.1; /* 'g' overlaps without more line-height */
+a[data-link-icon='sgfp']a[data-link-icon-type*=quad][data-link-icon-type*=mono] .link-icon-hook::after {
+        line-height: 0.95; /* 'g' overlaps without more line-height */
 }
 
 /*=---------------------------------=*/
@@ -8503,7 +8503,7 @@ a[data-link-icon='scholarpedia'] .link-icon-hook::after {
 
 a[data-link-icon='☀'] .link-icon-hook::after { /* Low Tech Magazine */
     --link-icon-size: 0.9em;
-    opacity: 1.0;
+    opacity: 0.95;
 }
 
 a[data-link-icon='audio-waveform-lines'] .link-icon-hook::after { /* Radiolab */
