--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -211,7 +211,7 @@
     --GW-code-popframe-line-number-color: #aaa;
     --GW-code-popframe-line-number-divider-color: #ccc;
 
-    --GW-extracts-options-dialog-backdrop-background-color: rgba(255,255,255,0.95);
+    --GW-extracts-options-dialog-backdrop-background-color: rgba(255, 255, 255, 0.95);
     --GW-extracts-options-dialog-background-color: var(--GW-body-background-color);
     --GW-extracts-options-dialog-border-color: #aaa;
     --GW-extracts-options-dialog-box-shadow-color: #444;
@@ -255,6 +255,7 @@
      */
     --GW-popins-popin-background-color: var(--GW-body-background-color);
     --GW-popins-popin-border-color: #aaa;
+    --GW-popins-popin-backdrop-color: rgba(0, 0, 0, 0.5);
     --GW-popins-box-shadow-color: #aaa;
     --GW-popins-popin-title-bar-background-color: #fff;
     --GW-popins-popin-title-bar-button-color: #888;
@@ -282,7 +283,7 @@
 
 	/*	Reader mode.
 	 */
-	--GW-reader-mode-masked-links-key-toggle-info-alert-panel-background-color: rgba(0,0,0,0.6);
+	--GW-reader-mode-masked-links-key-toggle-info-alert-panel-background-color: rgba(0, 0, 0, 0.6);
 	--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-color: #fff;
 	--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-shadow-color: #000;
 	--GW-reader-mode-masked-links-key-toggle-info-alert-panel-key-icon-border-color: #bbb;
@@ -583,6 +584,7 @@
      */
     --GW-popins-popin-background-color: var(--GW-body-background-color);
     --GW-popins-popin-border-color: #7c7c7c;
+    --GW-popins-popin-backdrop-color: rgba(255, 255, 255, 0.5);
     --GW-popins-box-shadow-color: #7c7c7c;
     --GW-popins-popin-title-bar-background-color: #000;
     --GW-popins-popin-title-bar-button-color: #999;
@@ -684,6 +686,8 @@
 
     --GW-popups-popup-title-bar-pattern: var(--GW-image-pattern-dotted-161616-on-252525-2x-gif);
     --GW-popups-popup-title-bar-pattern-focused: var(--GW-image-pattern-dotted-161616-on-3e3e3e-2x-gif);
+
+	--GW-popins-popin-backdrop-color: rgba(0, 0, 0, 0.8);
 
     --GW-dotted-underline-background-image: var(--GW-image-linear-dotted-fff-transparent-2x-gif);
     --GW-dotted-underline-hover-background-image: var(--GW-image-linear-dotted-bbb-transparent-2x-gif);
@@ -912,6 +916,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1695859607">
-<script src="/static/js/head.js?v=1695940955"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1695976418">
+<script src="/static/js/head.js?v=1695976418"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1695859607" as="image">
