--- a/css/default.css
+++ b/css/default.css
@@ -4404,9 +4404,17 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
     z-index: 100;
 
     /*  Styling. */
-    border: var(--GW-popins-popin-border-width) double var(--GW-popins-popin-border-color);
-    filter: drop-shadow(0px 0px 12px var(--GW-popins-box-shadow-color));
     background-color: var(--background-color);
+    border: var(--GW-popins-popin-border-width) double var(--GW-popins-popin-border-color);
+
+	/*	Having a filter on the popin causes `position:fixed` to not work on 
+		the popin backdrop (see below). This is not, technically, a ‘bug’:
+		https://stackoverflow.com/questions/52937708/why-does-applying-a-css-filter-on-the-parent-break-the-child-positioning
+		https://github.com/w3c/fxtf-drafts/issues/402
+		Still, maybe CSSWG will come to their senses someday?
+			—SA 2023-09-29
+	 */
+/* 	filter: drop-shadow(0px 0px 12px var(--GW-popins-box-shadow-color)); */
 }
 
 .popin-ancestor {
@@ -4416,6 +4424,30 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin + .popin {
     display: none;
+}
+
+/*	Backdrop.
+ */
+.popin-open + .popin::before {
+	content: "";
+	background-color: var(--background-color);
+	position: absolute;
+	top: calc(-1 * var(--GW-popins-popin-border-width));
+	left: calc(-1 * var(--GW-popins-popin-border-width));
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+    border: var(--GW-popins-popin-border-width) double var(--GW-popins-popin-border-color);
+}
+.popin-open + .popin::after {
+	content: "";
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: var(--GW-popins-popin-backdrop-color);
+	z-index: -2;
 }
 
 /*┌──────────────────┐*/
@@ -4617,6 +4649,7 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
     overscroll-behavior: none;
     max-height: calc(var(--GW-popins-popin-max-height) - 2 * var(--GW-popins-popin-border-width) - var(--popin-title-bar-height));
     height: 100%;
+    background-color: var(--background-color);
 }
 
 /*  Scroll bar styles (for WebKit/Blink).
