default/hakyll: noscript warning: design drifted due to size increase so spacing no longer works; update per https://news.ycombinator.com/item?id=37549045

--- a/template/default.html
+++ b/template/default.html
@@ -83,7 +83,8 @@
                                          border-color: var(--GW-abstract-border-color); /* Make look like theme-toggle/admonitions a bit more */
                                          border-width: 6px 6px 6px 6px;
                                          border-style: double; }
-                      nav#sidebar { padding-top: 80px; } /* avoid overlap with page header */</style>
+                      #markdownBody #noscript-warning-header p { margin: 10px; }
+                      nav#sidebar { padding-top: 160px; } /* avoid overlap with page header */</style>
     </noscript>
   </head>
 
